--- a/style.css
+++ b/style.css
@@ -7,7 +7,27 @@
 }
 header
 {
-	height: 730px;
+	//height: 900px;
+	height: 100vh;
+	//margin-bottom: 100px;
+}
+#arrowup
+{ 
+    
+    bottom: 0;
+	position: absolute;
+    position: fixed;
+    float: right;
+    height: 120px;
+	width: 120px;
+	right: 0;
+	z-index: 100;
+	display: none;
+}
+#arrowup:hover
+{
+    height: 130px;
+	width: 130px;
 }
 .logo 
 {
@@ -38,6 +58,7 @@ h1
 	line-height: 40px;
 	margin-top: 100px;
 	margin-bottom: 0px;
+	letter-spacing: 3px;
 }
 #contact
 {
@@ -101,15 +122,9 @@ h1
 	margin-bottom: 5px;
 	margin-top: 5px;
 }
-.down
-{
-    margin-top: 55px;
-    margin-bottom: 10px;
-	height: 100px;
-}
 .arrow
 {
-    margin-top: 0px;
+    margin-top: 100px;
     float: right;
 	margin-right: 50%;
     height: 100px;
@@ -120,6 +135,11 @@ h1
     height: 105px;
 	width: 105px;
 }
+#first
+{
+	height: 100vh;
+	margin-top: 100px;
+}
 #services
 {
 	/* Background pattern from Toptal Subtle Patterns */
@@ -129,38 +149,124 @@ h1
     -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
     box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
 	height: 600px;
-	margin-top: 150px;
-	margin-bottom: 300px;
 	width: 84%;
-	position: absolute;
+	position: relative;
 }
 #hed
 {
     font-size: 50px;
 	font-weight: bold;
-	margin-left: 18%;
-	margin-top: 40px;
+	margin-left: 5%;
+	margin-top: 30px;
 	margin-bottom: 0px;
 	line-height: 100px;
+	float: left;
 }
-#details2
+.servdeta
 {
-    position: relative;
-	height: 600px;
+	margin-left: 10%;
+	margin-top: 120px;
+	position: absolute;
+}
+#borderdec
+{
+    position: absolute;
+	height: 460px;
 	border: 5px solid black;
-	//z-index: 10;
-	margin-top: 260px;
-	width: 80%;
-	float: right;
-	margin-right: -3%;
-	display: flex;
-}
-.servdeta:last-child
-{
-    margin-right: 15%;
+	margin-left: 9%;
+	width: 85%;
+	z-index: 2;
+	margin-top: 100px;
 }
 ul
 {
     margin-left: 40px;
-	font-size: 20px;
+	font-size: 25px;
+}
+.arrow2
+{
+    margin-top: 100px;
+    float: right;
+	margin-right: 50%;
+    height: 100px;
+	width: 100px;
+}
+.second
+{
+	heigh: 1000px;
+}
+#about
+{
+    /* Background pattern from Toptal Subtle Patterns */
+    background-image: url(img/tiny.png);
+    height: 580px;
+    color: black;
+    right: 0;
+    width: 80%;
+	-webkit-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+    -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+    box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+	font-size: 30px;
+	position: absolute;
+	margin-top: 140px;
+}
+#aboutdet
+{
+    text-align: right;
+	border: 5px solid black;
+	height: 570px;
+	width: 65%;
+	color: #fff;
+	z-index: 8;
+	position: absolute;
+	margin-top: 200px;
+	margin-left: 10%;
+	color: black;
+	margin-bottom: 500px;
+}
+.addabout
+{
+	margin-left: 70%;
+	margin-top: 110px;
+}
+.addaboutdet
+{
+	font-weight: normal;
+	margin-right: 1%;
+	font-size: 30px;
+	margin-left: 12%;
+	margin-top: 50px;
+	margin-bottom: 85px;
+}
+footer
+{
+	height: 100px;
+	background-color: black;
+	-webkit-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+    -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+    box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
+	color: white;
+	text-align: center;
+	padding: 20px;
+	font-size: 28px;
+	margin-top: 100vh;
+}
+@media only screen and (max-width: 1376px) 
+{    
+    #pic
+    {
+	width: 257px;
+	height: 40px;	
+    margin-top: 200px;
+    }
+    .name
+    {
+	font-size: 35px;
+    margin-top: 30px;
+    }
+    .add
+    {   
+	font-size: 23px;
+    margin-top: 0;
+    }
 }
