--- a/style.css
+++ b/style.css
@@ -2,20 +2,47 @@
 {
     background-color: #fff;
     margin: 0; 
+	
 }
 header
 {
-	height: 10vh;
+	position: relative;
+	height: 100px;
 	background-color: black;
-	position:relative;
 }
 .logo
 {
 	width: 300px;
     height: auto;
-	margin-top: 3vh;
-	margin-left: 15vh;
+	margin-top: 30px;
+	margin-left: 50px;
+	margin-bottom: 17px;
 	cursor: pointer;
+}
+@media (max-width: 900px) {
+	.logo {
+		width: 250px;
+		height: auto;
+		margin-top: 37px;
+		margin-left: 30px;
+		cursor: pointer;
+	}
+	h1 {
+		position:absolute;
+		visibility: hidden;
+	}
+	#button{
+		visibility: visible;
+		position: relative;
+		width: 50px;
+		height: auto;
+		float: right;
+		margin-right: 30px;
+		margin-top: 30px;
+	}
+	#button:hover{
+		cursor: pointer;
+	}
 }
 main
 {
@@ -29,10 +56,10 @@ h1
 	color: white;
 	font-size: 30px;
 	float: right;
-	font-family: 'Merriweather', serif;
-	margin-top: 3vh;
+	font-family: 'Montserrat', sans-serif;
+	margin-top: 43px;
 	margin-bottom: 0px;
-	margin-right: 5vh;
+	margin-right: 25px;
 	letter-spacing: 3px;
 	transition: transform .1s;
 }
@@ -40,215 +67,28 @@ h1:hover
 {
 	transform: scale(1.08);
 }
+@media (min-width: 900px) {
+	#button{
+		visibility: hidden;
+	}
+}
 #contact
 {
-    margin-right: 15vh;
+    margin-right: 50px;
 }
-#background
-{
-	align: center;
+#background {
 	height: 90vh;
-	width: auto;
-}
-#contup
-{
-    position: absolute;
-	margin-top: 38px;
-	margin-left: 59%;
-}
-#contdown
-{
-    margin-top: 308px;
-	margin-left: 59%;
-    position: absolute;
-}
-.add
-{   
-    margin-bottom: 5px;
-	margin-top: 5px;
-	font-size: 37px;
-	font-weight: normal;
-}
-#details
-{
-    text-align: right;
-	border: 5px solid black;
-	height: 500px;
-	margin-top: -20px;
-	width: 55%;
-	color: #fff;
-	z-index: 8;
-	position: absolute;
-	margin-left: 10%;
-	color: black;
-}
-#dettup
-{
-	margin-top: 38px;
-	margin-right: 2%;
-}
-#detdown
-{
-    margin-top: 108px;
-	margin-right: 2%;
-}
-.name
-{
-	font-size: 50px;
-	margin-bottom: 5px;
-	margin-top: 5px;
-}
-.arrow
-{
-    margin-top: 100px;
-    float: right;
-	margin-right: 50%;
-    height: 100px;
-	width: 100px;
-}
-.arrow:hover
-{
-    height: 105px;
-	width: 105px;
-}
-.first
-{
-	height: 100vh;
-	margin-bottom: 50px;
-}
-#services
-{
-	/* Background pattern from Toptal Subtle Patterns */
-    background-image: url(img/tiny.png);
-	background-position: right;
-	-webkit-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-	height: 600px;
-	width: 84%;
-	position: relative;
-}
-#hed
-{
-    font-size: 50px;
-	font-weight: bold;
-	margin-left: 5%;
-	margin-top: 30px;
-	margin-bottom: 0px;
-	line-height: 100px;
-	float: left;
-}
-.servdeta
-{
-	margin-left: 10%;
-	margin-top: 120px;
-	position: absolute;
-}
-#borderdec
-{
-    position: absolute;
-	height: 460px;
-	border: 5px solid black;
-	margin-left: 9%;
-	width: 85%;
-	z-index: 2;
-	margin-top: 100px;
-}
-ul
-{
-    margin-left: 40px;
-	font-size: 25px;
-}
-.arrow2
-{
-    margin-top: 100px;
-    float: right;
-	margin-right: 50%;
-    height: 100px;
-	width: 100px;
-}
-.arrow2:hover
-{
-    height: 105px;
-	width: 105px;
-}
-.second
-{
-	height: 100vh;
-}
-#about
-{
-    /* Background pattern from Toptal Subtle Patterns */
-    background-image: url(img/tiny.png);
-    height: 580px;
-    color: black;
-    right: 0;
-    width: 80%;
-	-webkit-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-	font-size: 30px;
-	position: absolute;
-	margin-top: 140px;
-}
-#aboutdet
-{
-    text-align: right;
-	border: 5px solid black;
-	height: 570px;
-	width: 65%;
-	color: #fff;
-	z-index: 8;
-	position: absolute;
-	margin-top: 200px;
-	margin-left: 12%;
-	color: black;
-	margin-bottom: 500px;
-}
-.addabout
-{
-	margin-left: 73%;
-	margin-top: 110px;
-}
-.addaboutdet
-{
-	font-weight: normal;
-	margin-right: 1%;
-	font-size: 30px;
-	margin-left: 12%;
-	margin-top: 50px;
-	margin-bottom: 85px;
+	background-image: url("img/background.jpg");
+	background-size: cover;
 }
 footer
 {
+	font-family: 'Montserrat', sans-serif;
 	height: 100px;
 	background-color: black;
-	-webkit-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    -moz-box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
-    box-shadow: -7px 25px 75px 1px rgba(0,0,0,0.6);
 	color: white;
-	position: absolute;
 	bottom: 0;
 	font-size: 28px;
 	width: 100%;
 	text-align: center;
-}
-@media only screen and (max-width: 1376px) 
-{    
-    #pic
-    {
-	width: 257px;
-	height: 40px;	
-    margin-top: 200px;
-    }
-    .name
-    {
-	font-size: 35px;
-    margin-top: 30px;
-    }
-    .add
-    {   
-	font-size: 23px;
-    margin-top: 0;
-    }
 }
