--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-﻿body 
-{
+﻿body {
     background-color: #fff;
     margin: 0; 
-	
 }
-header
-{
+
+header {
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
@@ -52,34 +50,44 @@ nav{
 	cursor: pointer;
 }
 
-main
-{
-	height: 200vh;
-	position: relative;
-	overflow: hidden;
-}
-h1
-{
-	cursor: pointer;
+.section-main{
+	height: 100vh;
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3) ), 
+	url("img/background.jpg");
+	background-size: cover;
+	display: flex;
+	flex-direction: column;
 	color: white;
-	font-size: 30px;
-	float: right;
-	font-family: 'Montserrat', sans-serif;
-	margin-top: 43px;
-	margin-bottom: 0px;
-	margin-right: 25px;
-	letter-spacing: 3px;
-	transition: transform .1s;
-}
-h1:hover
-{
-	transform: scale(1.08);
 }
 
-#background {
-	height: 90vh;
-	background-image: url("img/background.jpg");
-	background-size: cover;
+b{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 70px;
+	margin-top: 15vh;
+	margin-left: 10vh;
+	margin-right: 10vh;
+}
+.smallTitle{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 40px;
+	margin-top: 60px;
+	margin-left: 10vh;
+	margin-right: 10vh;
+	margin-bottom: 60px;
+}
+#buttonMain{
+	height: 150px;
+	width: 550px;
+	border: none;
+	border-radius: 80px;
+	background-color: #B11919;
+	font-family: 'Secular One', sans-serif;
+	font-size: 50px;
+	color: white;
+	margin-left: 10vh;
+}
+.section{
+	height: 100vh;
 }
 footer
 {
@@ -93,11 +101,8 @@ footer
 	text-align: center;
 }
 
+
 @media (max-width: 900px) {
-	h1 {
-		position:absolute;
-		visibility: hidden;
-	}
 	#button{
 		display: block;
 		position: relative;
@@ -106,6 +111,18 @@ footer
 	}
 	#button:hover{
 		cursor: pointer;
+	}
+	b{
+		font-size: 40px;
+	}
+	.smallTitle{
+		font-size: 30px;
+	}
+	#buttonMain{
+		height: 75px;
+		width: 275px;
+		border-radius: 80px;
+		font-size: 25px;
 	}
 }
 
@@ -117,8 +134,6 @@ footer
 	.logo {
 		max-height: 36px;
 		width: auto;
-		width: auto;
-		cursor: pointer;
 	}
 
 	nav{
