--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
-﻿body {
+﻿html{
+	scroll-behavior: smooth;
+}
+body {
     background-color: #fff;
-    margin: 0; 
+    margin: 0;	
 }
 
 header {
@@ -57,34 +60,35 @@ nav{
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
+	justify-content: start;
 	color: white;
 }
 
-b{
+h1{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 70px;
-	margin-top: 15vh;
+	font-size: 55px;
+	margin-top: 120px;
 	margin-left: 10vh;
 	margin-right: 10vh;
+	margin-bottom: 10px;
 }
-.smallTitle{
+h2{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 40px;
-	margin-top: 60px;
+	font-size: 30px;
 	margin-left: 10vh;
 	margin-right: 10vh;
-	margin-bottom: 60px;
 }
 #buttonMain{
-	height: 150px;
-	width: 550px;
+	height: 125px;
+	width: 458px;
 	border: none;
 	border-radius: 80px;
 	background-color: #B11919;
 	font-family: 'Secular One', sans-serif;
-	font-size: 50px;
+	font-size: 40px;
 	color: white;
 	margin-left: 10vh;
+	margin-top: 120px;
 }
 .section{
 	height: 100vh;
@@ -112,17 +116,25 @@ footer
 	#button:hover{
 		cursor: pointer;
 	}
-	b{
+	h1{
 		font-size: 40px;
+		margin-top: 120px;
+		margin-left: 5vh;
+		margin-right: 5vh;
 	}
-	.smallTitle{
-		font-size: 30px;
+	h2{
+		font-family: 'Montserrat', sans-serif;
+		font-size: 25px;
+		margin-left: 5vh;
+		margin-right: 5vh;
 	}
 	#buttonMain{
-		height: 75px;
-		width: 275px;
+		height: 101px;
+		width: 374px;
 		border-radius: 80px;
-		font-size: 25px;
+		font-size: 35px;
+		margin-left: 5vh;
+		margin-top: 80px;
 	}
 }
 
