--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-﻿body 
-{
-    background-color: #fff;
-    margin: 0; 
-	
+﻿html{
+	scroll-behavior: smooth;
 }
-header
-{
+body {
+    background-color: #fff;
+    margin: 0;	
+}
+
+header {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
+	padding-left: 60px;
+	padding-right: 60px;
 	align-items: center;
 	position: relative;
-	height: 65px;
+	height: 10vh;
 	background-color: black;
 }
 
@@ -52,34 +55,46 @@ nav{
 	cursor: pointer;
 }
 
-main
-{
-	height: 200vh;
-	position: relative;
-	overflow: hidden;
-}
-h1
-{
-	cursor: pointer;
-	color: white;
-	font-size: 30px;
-	float: right;
-	font-family: 'Montserrat', sans-serif;
-	margin-top: 43px;
-	margin-bottom: 0px;
-	margin-right: 25px;
-	letter-spacing: 3px;
-	transition: transform .1s;
-}
-h1:hover
-{
-	transform: scale(1.08);
+main{
+	padding-left: 60px;
 }
 
-#background {
+.section-main{
 	height: 90vh;
-	background-image: url("img/background.jpg");
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3) ), 
+	url("img/background.jpg");
 	background-size: cover;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	color: white;
+}
+
+.section-main h1{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 32px;
+	margin-top: 40px;
+	margin-right: 40px;
+	margin-bottom: 10px;
+}
+.section-main h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;
+	margin-right: 40px;
+}
+#buttonMain{
+	height: 60px;
+	width: 200px;
+	border: none;
+	border-radius: 80px;
+	background-color: #B11919;
+	font-family: 'Secular One', sans-serif;
+	font-size: 18px;
+	color: white;
+	margin-top: 40px;
+}
+.section{
+	height: 100vh;
 }
 footer
 {
@@ -93,11 +108,8 @@ footer
 	text-align: center;
 }
 
+
 @media (max-width: 900px) {
-	h1 {
-		position:absolute;
-		visibility: hidden;
-	}
 	#button{
 		display: block;
 		position: relative;
@@ -110,6 +122,24 @@ footer
 }
 
 @media (min-width: 900px) {
+	header{
+		padding-left: 120px;
+		padding-right: 120px;
+	}
+
+	main{
+		padding-left: 120px;
+	}
+
+	.section-main h1{
+		font-size: 41px;
+		margin-top: 80px;
+	}
+	.section-main h2{
+		font-family: 'Montserrat', sans-serif;
+		font-size: 24px;
+	}
+
 	#button{
 		display: none;
 	}
@@ -117,11 +147,16 @@ footer
 	.logo {
 		max-height: 36px;
 		width: auto;
-		width: auto;
-		cursor: pointer;
 	}
 
 	nav{
 		display: flex;
+	}
+
+	#buttonMain{
+		height: 80px;
+		width: 260px;
+		font-size: 24px;
+		margin-top: 80px;
 	}
 }
