--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@ body {
     background-color: #fff;
     margin: 0;	
 }
-
+::selection {
+  color: white;
+  background: #B11919;
+}
 header {
 	display: flex;
 	justify-content: space-between;
@@ -15,6 +18,7 @@ header {
 	position: relative;
 	height: 10vh;
 	background-color: black;
+	white-space: nowrap;
 }
 
 nav{
@@ -55,6 +59,48 @@ nav{
 	cursor: pointer;
 }
 
+.sidenav {
+  height: 100vh;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #000;
+  overflow-x: hidden;
+  padding-top: 90px;
+  transition: 0.5s;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.sidenav a {
+  padding: 8px 8px 15px 32px;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
 main{
 	padding-left: 60px;
 }
@@ -62,7 +108,10 @@ main{
 .section-main{
 	height: 90vh;
 	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3) ), 
-	url("img/background.jpg");
+	url("assets/background.jpg");
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
 	background-size: cover;
 	display: flex;
 	flex-direction: column;
@@ -72,34 +121,61 @@ main{
 
 .section-main h1{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 32px;
-	margin-top: 40px;
-	margin-right: 40px;
+	letter-spacing: 2px;
+	font-size: 31px;
+	margin-top: 90px;
+	margin-right: 20px;
 	margin-bottom: 10px;
 }
 .section-main h2{
 	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;
-	margin-right: 40px;
+	font-size: 18px;
 }
 #buttonMain{
-	height: 60px;
-	width: 200px;
+	height: 80px;
+	width: 260px;
 	border: none;
 	border-radius: 80px;
 	background-color: #B11919;
 	font-family: 'Secular One', sans-serif;
-	font-size: 18px;
+	font-size: 24px;
 	color: white;
 	margin-top: 40px;
 }
 .section{
+	display: flex;
+	padding-left: 60px;
+	padding-right: 60px;
+	flex-direction: column;
+	justify-content: start;
 	height: 100vh;
+}
+h1{
+	font-family: 'Montserrat', sans-serif;
+	letter-spacing: 2px;
+	font-size: 51px;
+	margin-top: 90px;
+	margin-right: 20px;
+	margin-bottom: 15px;
+}
+h2{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+	letter-spacing: 1.3px;
+}
+ul{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 18px;
+}
+li{
+	padding: 4px;
 }
 footer
 {
+	display: flex;
+	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100px;
+	height: 125px;
 	background-color: black;
 	color: white;
 	bottom: 0;
@@ -107,18 +183,10 @@ footer
 	width: 100%;
 	text-align: center;
 }
-
-
-@media (max-width: 900px) {
-	#button{
-		display: block;
-		position: relative;
-		width: 50px;
-		height: auto;
-	}
-	#button:hover{
-		cursor: pointer;
-	}
+#made-by{
+	margin: 0;
+	color: white;
+	font-size: 14px;
 }
 
 @media (min-width: 900px) {
@@ -130,16 +198,23 @@ footer
 	main{
 		padding-left: 120px;
 	}
-
+	.section{
+		padding-left: 120px;
+		padding-rigth: 120px;
+	}
 	.section-main h1{
-		font-size: 41px;
-		margin-top: 80px;
+		font-family: 'Montserrat', sans-serif;
+		letter-spacing: 2px;
+		font-size: 51px;
+		margin-top: 95px;
+		margin-bottom: 15px;
+		margin-right: 20px;
 	}
 	.section-main h2{
 		font-family: 'Montserrat', sans-serif;
 		font-size: 24px;
+		margin-right: 20px;
 	}
-
 	#button{
 		display: none;
 	}
@@ -154,9 +229,9 @@ footer
 	}
 
 	#buttonMain{
-		height: 80px;
-		width: 260px;
-		font-size: 24px;
+		height: 100px;
+		width: 333px;
+		font-size: 32px;
 		margin-top: 80px;
 	}
 }
