--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ footer
 		font-size: 14px;
 	}
 }
-@media (max-width: 750px) {
+@media (max-width: 750px) and (max-height: 850px) {
 	header{
 		padding-left: 30px;
 		padding-right: 30px;
