--- a/style.css
+++ b/style.css
@@ -99,6 +99,28 @@ nav{
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+	.section-main h1{
+		font-size: 21px;
+		margin-top: 25px;
+		margin-bottom: 5px;
+	}
+	.section-main h2{
+		font-size: 14px;
+	}
+	.logo {
+		max-height: 25px;
+		width: auto;
+	}
+	#buttonMain{
+		height: 50px;
+		width: 166px;
+		font-size: 20px;
+		margin-top: 20px;
+	}
+	footer
+	{
+		height: 55px;
+	}
 }
 
 main{
@@ -270,7 +292,7 @@ footer
 		font-size: 14px;
 	}
 }
-@media (max-width: 750px) and (max-height: 650px) {
+@media (max-width: 750px){
 	header{
 		padding-left: 30px;
 		padding-right: 30px;
