--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ nav{
   margin-left: 50px;
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (orientation:landscape) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 	.section-main h1{
